fixed stretch arrow to now display the correct color

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,7 +31,7 @@ button, input {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: rgba(64, 87, 161, 0.726);
+  background: #d12c53e0;
   width: 50px;
   height: 50px;
   -webkit-border-radius: 35px;
@@ -58,7 +58,7 @@ button, input {
   transition: all 0.3s ease;
 }
 .return-to-top:hover {
-  background: #4056A1;
+  background: #d12c53;
   cursor: pointer;
 }
 .return-to-top:hover i {
